--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,11 @@ jobs:
   name: Scrape-Times
   runs-on: ubuntu-latest
   steps:
-  - uses: actions/checkout@main'
+  - uses: actions/checkout@main
+  
   - name: Setup Deno Module
   uses: denolib/setup-deno@master
+
   - name: Scrape
     run: deno run --unstable --allow-net --allow-write --allow-read get_data.ts
     
