--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    # * is a special character in YAML so you have to quote this string
+    - cron: "*/5 * * * *"
 
 name: Scrape Disney Times
 jobs:
