--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron: '*/5 * * * *'
+    - cron: "*/5 * * * *"
+  push:
+    branches:
+      - main
 
 name: Scrape Disney Times
 jobs:
